Fixed overlapping footer/content issue. Still having trouble with white space at bottom of screen.

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,13 @@
 html, body {
   height: 100%;
+  font-family: Smallcaps, arial;
 }
 #menu {
-  height: 50px;
   clear: both;
   width: auto;
   background-color: black;
   padding: 5px;
+  height: 10%;
 
 }
 
@@ -15,7 +16,9 @@ html, body {
   flex-flow: row;
   justify-content: space-between;
   margin: 0px;
+  margin-top: 10px;
   padding: 0px 50px 0px 50px;
+  text-align: center;
 }
 #menu a {
   font-size: 1.75em;
@@ -28,6 +31,7 @@ html, body {
   overflow: hidden;
   background-color: inherit;
   color: grey;
+  text-decoration: none;
 
 }
 #menu a:hover {
@@ -104,7 +108,7 @@ a:visited {
   display: flex;
   flex-flow: row;
   justify-content: space-between;
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
@@ -112,6 +116,7 @@ a:visited {
   text-align: center;
   color: grey;
   background-color: #000;
+  clear: both;
 }
 .footer li {
     list-style-type: none;
@@ -120,9 +125,8 @@ a:visited {
 }
 body {
   margin: 0;
-  padding-bottom: 6rem;
   position: relative;
-  min-height: 100%;
+  
 
 
 }
@@ -132,7 +136,9 @@ body {
   margin: 0 auto;
   padding-top: 64px;
   max-width: 1500px;
-  width: 94%;
+  width: 100%;
+  position: relative;
+  height: 70%;
 
 }
 .content h1 {
